Sat Dec 25 04:04:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * dselect/pkgtop.cc: use waddnstr instead of waddch so we don't strip
    the 8th bit of characters
  * Replace `Debian Linux' with `Debian GNU/Linux' in some more places
  * Update Spanish translation
  * main/enquire.c: always use a minimum width of 80 in list1package

Sat Dec 25 02:50:31 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Oops, forgot to add scripts/dpkg-safefilelist.{1,pl}
  * debian/control: remove double empty line
  * dpkg-deb/main.c: Fix help-message

Fri Dec 24 17:34:30 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * version-nr: update to 1.6.5
  * doc/Makefile.in: install THANKS
  * TODO: remove items that have been done
  * lib/showcright.c: exit(0) after showing the copyright since
    we don't exec cat anymore
  * Patch from David Huggins-Daines <dhd@eradicator.org>:
    + main/configure.c: add NULL to execlp() parameters; this fixes the random
      segfaults when showing the conffile-diff

Fri Dec 24 15:35:29 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * debian/control: add Build-Depends
  * THANKS: new file which lists everyone who contributed to the code
  * Change `Debian Linux' to `Debian GNU/Linux' in a couple of manpages
  * main/enquiry.c: modify list1package to use the full width of the tty
  * main/main.c: fix wrong call to fputs
  * Merge patches from Adam Heath:
    + lib/mlib.c: new function do_fd_copy to read a file into a fd
    + dpkg-deb/build.c: use do_fd_copy
    + dpkg-deb/build.c: use dpkg-deb-filelist to reorder files when
      building a package
    + dpkg-deb/info.c: use do_fd_copy 
    + lib/showcright.c: use do_fd_copy to read license
    + scripts/dpkg-safelist.{1,pl}: new script to reorder a filelist to
      make sure symlinks are listed after their targets. 
    + dpkg-deb/main.c: add -z option to set compression level
    + dpkg-deb/build.c: pass new -z options to gzip
  * dpkg-deb/dpkg-deb.1: document new -z option
