@@ -14,7 +14,7 @@ dpkg (1.6.5) unstable; urgency=low
   * Fix segfaults when producing a diff between current and new conffile,
     Closes: Bug# 52197
 
- -- Wichert Akkerman <wakkerma@debian.org>  Sat, 25 Dec 1999 04:12:05 +0100
+ -- Wichert Akkerman <wakkerma@debian.org>  Sat, 25 Dec 1999 04:34:06 +0100
 
 dpkg (1.6.4) unstable; urgency=low
 
