@@ -5,6 +5,7 @@ Sat Dec 25 04:04:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>
   * Replace `Debian Linux' with `Debian GNU/Linux' in some more places
   * Update Spanish translation
   * main/enquire.c: always use a minimum width of 80 in list1package
+  * debian/rules: install dpkg-safefilelist
 
 Sat Dec 25 02:50:31 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
